# NovelAgent

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh  setup.sh
examples/fantasy_novel/: plot_outline.yaml  project.yaml  world.yaml
examples/fantasy_novel/characters/: kael.yaml  mira.yaml  sera.yaml  theron.yaml  voss.yaml
examples/xuanhuan_novel/: plot_outline.yaml  project.yaml  world.yaml
examples/xuanhuan_novel/characters/: han_feng.yaml  lin_yan.yaml  xiao_bingning.yaml  (+2 more)
prompts/character/: antagonist.jinja2  mentor.jinja2  protagonist.jinja2  sidekick.jinja2  system.jinja2  threshold_guardian.jinja2
prompts/plot/: system.jinja2
prompts/world/: system.jinja2
prompts/writing/: system.jinja2
storyforge/: __init__.py  __main__.py  cli.py  config.py
storyforge/agents/: base.py  character.py  expansion.py  extract.py  plot.py  registry.py  visual_agent.py  world.py  writing.py
storyforge/events/: bus.py  middleware.py  types.py
storyforge/llm/: anthropic.py  base.py  factory.py  ollama.py  openai.py  rate_limiter.py
storyforge/memory/: base.py  context_window.py  structured.py  summary.py  vector.py
storyforge/output/: formats.py  manager.py
storyforge/pipeline/: chapter.py  stages.py  visual.py
storyforge/utils/: logging.py  retry.py  tokens.py
storyforge/visual/: __init__.py  base.py  factory.py  openai_image.py  openai_video.py  output.py
tests/: test_config.py
tests/test_agents/: test_emotional_state.py  test_plot_dataclasses.py
tests/test_llm/: test_rate_limiter.py
tests/test_memory/: test_context_window.py
(+11 files in other folders)
