[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storyforge"
version = "0.1.0"
description = "Multi-agent creative writing framework"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "ollama>=0.4.0",
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "chromadb>=0.5.0",
    "tiktoken>=0.7",
    "rich>=13.7",
    "tenacity>=8.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
pdf = ["weasyprint>=62.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.scripts]
storyforge = "storyforge.cli:main"
